--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "entitysdk"
 dependencies = [
+    "pydantic",
+    "requests"
 ]
 authors = [
     {name = "Open Brain Institute", email = "john.doe@openbraininstitute.org"}
