Use httpx and a shared http client

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "entitysdk"
 dependencies = [
+    "httpx",
     "pydantic",
-    "requests"
 ]
 authors = [
     {name = "Open Brain Institute", email = "john.doe@openbraininstitute.org"}
