--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "entitysdk"
 dependencies = [
+    "httpx",
+    "pydantic",
 ]
 authors = [
     {name = "Open Brain Institute", email = "john.doe@openbraininstitute.org"}
@@ -72,6 +74,7 @@ convention = "google"
     "PLC2701", # Private name import from external module
     "PLR2004", # magic value (constant) used in comparison (i.e. expected == 3)
     "S101",    # Use of `assert` detected
+    "S106",    # Magic value
     "SIM117",  # Use a single `with` statement with multiple contexts
     "SLF001",  # private member access
 ]
