--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "entitysdk"
 dependencies = [
     "httpx",
     "pydantic",
+    "pydantic-settings",
 ]
 authors = [
     {name = "Open Brain Institute", email = "john.doe@openbraininstitute.org"}
