--- a/.github/workflows/sdist.yml
+++ b/.github/workflows/sdist.yml
@@ -1,32 +1,48 @@
 name: PyPI
 
 on:
+  workflow_dispatch:
+  pull_request:
   push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+    branches:
+     - main
+  release:
+    types:
+      - published
 
 jobs:
-  build-n-publish:
-    name: Build and publish on PyPI
+
+  build_sdist:
+    name: Build sdist
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build SDist
+        run: pipx run build --sdist
+
+      - name: Check metadata
+        run: pipx run twine check dist/*
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: dist
+
+  upload_sdist:
+    name: Upload sdist
+    needs: [build_sdist]
     runs-on: ubuntu-latest
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
+    if: github.event_name == 'release' && github.event.action == 'published'
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
+      - uses: actions/download-artifact@v4
         with:
-          python-version: 3.12
+          name: build
+          path: dist
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          python -m pip install build
-
-      - name: Build distribution packages
-        run:
-            python -m build
-
-      - name: Publish distribution packages to PyPI
+      - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
