Allow running tox -e notebooks to run and clear notebooks

--- a/tox.ini
+++ b/tox.ini
@@ -48,3 +48,16 @@ deps =
 commands =
     python -m build -o {envtmpdir}/dist
     twine check {envtmpdir}/dist/*
+
+[testenv:notebooks]
+deps =
+    jupyter
+    nbconvert
+    rich
+    pandoc
+commands =
+    jupyter nbconvert --execute --to markdown {posargs:examples/*.ipynb}
+    jupyter nbconvert \
+        --ClearOutputPreprocessor.enabled=True \
+        --ClearMetadataPreprocessor.enabled=True \
+        --inplace {posargs:examples/*.ipynb}
