Setup integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ minversion = 3.18
 deps =
     {[base]testdeps}
 commands =
-    python -m pytest {posargs}
+    python -m pytest --cov={[base]name} {posargs}
     python -m coverage xml
     python -m coverage html
 
@@ -61,3 +61,9 @@ commands =
         --ClearOutputPreprocessor.enabled=True \
         --ClearMetadataPreprocessor.enabled=True \
         --inplace {posargs:examples/*.ipynb}
+
+[testenv:integration]
+deps =
+    {[base]testdeps}
+commands =
+    python -m pytest --cov={[base]name}.models tests/integration {posargs}
