--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,10 +39,10 @@ addopts = [
     "-vv",
     "-ra",
     "--import-mode=importlib",
-    "--cov=entitysdk",
     "--durations=10",
     "--durations-min=1.0",
 ]
+testpaths = ["tests/unit"]
 
 [tool.ruff]
 line-length = 100
