--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ minversion = 3.18
 deps =
     {[base]testdeps}
 commands =
-    python -m pytest --cov={[base]name} {posargs}
+    python -m pytest --cov={[base]name} tests/unit {posargs}
     python -m coverage xml
     python -m coverage html
 
@@ -66,4 +66,4 @@ commands =
 deps =
     {[base]testdeps}
 commands =
-    python -m pytest --cov={[base]name}.models tests/integration {posargs}
+    python -m pytest tests/integration {posargs}
