--- a/tox.ini
+++ b/tox.ini
@@ -65,5 +65,7 @@ commands =
 [testenv:integration]
 deps =
     {[base]testdeps}
+setenv =
+    DB_API_URL = {env:DB_API_URL:http://localhost:8000}
 commands =
     python -m pytest tests/integration {posargs}
