Setup integration tests (#26)

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ minversion = 3.18
 deps =
     {[base]testdeps}
 commands =
-    python -m pytest {posargs}
+    python -m pytest --cov={[base]name} tests/unit {posargs}
     python -m coverage xml
     python -m coverage html
 
@@ -61,3 +61,11 @@ commands =
         --ClearOutputPreprocessor.enabled=True \
         --ClearMetadataPreprocessor.enabled=True \
         --inplace {posargs:examples/*.ipynb}
+
+[testenv:integration]
+deps =
+    {[base]testdeps}
+setenv =
+    DB_API_URL = {env:DB_API_URL:http://localhost:8000}
+commands =
+    python -m pytest tests/integration {posargs}
