--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,6 @@ deps =
 passenv =
     ACCESS_TOKEN
 setenv =
-    DB_API_URL = {env:DB_API_URL:http://localhost:8000}
+    DB_API_URL = {env:DB_API_URL:https://staging.openbraininstitute.org/api/entitycore}
 commands =
     python -m pytest tests/integration {posargs}
