--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ testdeps =
     pytest-cov
     pytest-httpx
     coverage[toml]
+paths = src tests examples
 
 [tox]
 envlist =
@@ -29,8 +30,8 @@ deps =
     mypy
     types-requests
 commands =
-	python -m ruff format --check
-	python -m ruff check
+	python -m ruff format --check {[base]paths}
+	python -m ruff check {[base]paths}
     python -m mypy src
 
 [testenv:format]
@@ -38,8 +39,8 @@ skip_install = true
 deps =
     ruff
 commands =
-	python -m ruff format
-	python -m ruff check --fix
+	python -m ruff format {[base]paths}
+	python -m ruff check --fix {[base]paths}
 
 [testenv:check-packaging]
 skip_install = true
