set ruff included explicitly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ addopts = [
 [tool.ruff]
 line-length = 100
 target-version = "py311"
+include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "examples/**/*.py"]
 
 [tool.ruff.lint]
 select = [
