make sure max_concurrent==1 does not use any threading

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,6 @@ testdeps =
     pytest-cov
     pytest-httpx
     coverage[toml]
-paths = src tests examples
 
 [tox]
 envlist =
@@ -30,8 +29,8 @@ deps =
     mypy
     types-requests
 commands =
-	python -m ruff format --check {[base]paths}
-	python -m ruff check {[base]paths}
+	python -m ruff format --check
+	python -m ruff check
     python -m mypy src
 
 [testenv:format]
@@ -39,8 +38,8 @@ skip_install = true
 deps =
     ruff
 commands =
-	python -m ruff format {[base]paths}
-	python -m ruff check --fix {[base]paths}
+	python -m ruff format
+	python -m ruff check --fix
 
 [testenv:check-packaging]
 skip_install = true
