Move created_by/updated_by to Identifiable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,9 @@ addopts = [
     "--durations=10",
     "--durations-min=1.0",
 ]
+filterwarnings = [
+    "error::pydantic.warnings.PydanticDeprecatedSince20"
+]
 
 [tool.ruff]
 line-length = 100
