--- a/tox.ini
+++ b/tox.ini
@@ -72,3 +72,27 @@ setenv =
     DB_API_URL = {env:DB_API_URL:http://localhost:8000}
 commands =
     python -m pytest tests/integration {posargs}
+
+
+[testenv:generate-server-schemas]
+skip_install = true
+deps =
+    datamodel-code-generator[http, debug]
+    ruff
+setenv =
+    DB_API_URL = {env:DB_API_URL:https://staging.openbraininstitute.org/api/entitycore/openapi.json}
+commands =
+    datamodel-codegen \
+        --url {env:DB_API_URL} \
+        --input-file-type openapi \
+        --openapi-scopes schemas \
+        --output-model-type pydantic_v2.BaseModel \
+        --target-python-version 3.11 \
+        --use-subclass-enum \
+        --use-union-operator \
+        --use-standard-collections \
+        --output {toxinidir}/src/entitysdk/_server_schemas.py \
+        --custom-template-dir {toxinidir}/templates \
+        --formatters ruff-format \
+        --use-annotated \
+        --additional-imports "enum.StrEnum"
