--- a/tox.ini
+++ b/tox.ini
@@ -95,4 +95,5 @@ commands =
         --custom-template-dir {toxinidir}/templates \
         --formatters ruff-format \
         --use-annotated \
-        --additional-imports "enum.StrEnum"
+        --custom-file-header-path templates/header.jinja2
+    ruff check --isolated --select I  --fix {toxinidir}/src/entitysdk/_server_schemas.py
