--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic",
     "pydantic-settings",
     "typing_extensions; python_version < '3.12'",
+    "backports.strenum; python_version < '3.11'",
 ]
 authors = [
     {name = "Open Brain Institute", email = "info@openbraininstitute.org"}
