--- a/tox.ini
+++ b/tox.ini
@@ -76,6 +76,7 @@ commands =
 
 [testenv:generate-server-schemas]
 skip_install = true
+allowlist_externals = perl
 deps =
     datamodel-code-generator[http, debug]
     ruff
@@ -96,4 +97,4 @@ commands =
         --formatters ruff-format \
         --use-annotated \
         --custom-file-header-path templates/header.jinja2
-    ruff check --isolated --select I  --fix {toxinidir}/src/entitysdk/_server_schemas.py
+    perl -i -pe 'BEGIN{$s="from __future__ import annotations"} if($.==1){print "$s\n"} $_ = "" if $_ eq "$s\n"' {toxinidir}/src/entitysdk/_server_schemas.py
