--- a/tox.ini
+++ b/tox.ini
@@ -76,6 +76,7 @@ commands =
 
 [testenv:generate-server-schemas]
 skip_install = true
+allowlist_externals = perl
 deps =
     datamodel-code-generator[http, debug]
     ruff
@@ -95,4 +96,5 @@ commands =
         --custom-template-dir {toxinidir}/templates \
         --formatters ruff-format \
         --use-annotated \
-        --additional-imports "enum.StrEnum"
+        --custom-file-header-path templates/header.jinja2
+    perl -i -pe 'BEGIN{$s="from __future__ import annotations"} if($.==1){print "$s\n"} $_ = "" if $_ eq "$s\n"' {toxinidir}/src/entitysdk/_server_schemas.py
