--- a/tox.ini
+++ b/tox.ini
@@ -96,5 +96,6 @@ commands =
         --custom-template-dir {toxinidir}/templates \
         --formatters ruff-format \
         --use-annotated \
+        --output-datetime-class AwareDatetime \
         --custom-file-header-path templates/header.jinja2
     perl -i -pe 'BEGIN{$s="from __future__ import annotations"} if($.==1){print "$s\n"} $_ = "" if $_ eq "$s\n"' {toxinidir}/src/entitysdk/_server_schemas.py
