--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "entitysdk"
 dependencies = [
     "httpx",
-    "pydantic",
+    "pydantic>=2.11",
     "pydantic-settings",
     "typing_extensions; python_version < '3.12'",
     "backports.strenum; python_version < '3.11'",
