Add MEModel-to-SONATA staging function (#118)
* stage memodel as sonata single-cell circuit

* add h5py dependency

* add unit-tests

* mechanism_files added to DownloadedMEModel

* Make generate_sonata_files_from_memodel protected

* _generate_sonata_files_from_memodel additional changes

* staging optional dependency added for tests

* remove hoc_files

---------

Co-authored-by: James Isbister <isbisterjb@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,11 @@ classifiers = [
 ]
 dynamic = ["version"]
 
+[project.optional-dependencies]
+staging = [
+    "h5py",
+]
+
 [project.urls]
 documentation = "https://entitysdk.readthedocs.io/en/stable"
 repository = "https://github.com/openbraininstitute/entitysdk"
