Add update-traces to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -101,3 +101,28 @@ commands =
         --output-datetime-class AwareDatetime \
         --custom-file-header-path templates/header.jinja2
     perl -i -pe 'BEGIN{$s="from __future__ import annotations"} if($.==1){print "$s\n"} $_ = "" if $_ eq "$s\n"' {toxinidir}/src/entitysdk/_server_schemas.py
+
+[testenv:update-traces]
+skip_install = true
+deps =
+setenv =
+    ENTITYCORE_REPO_URL = "https://github.com/openbraininstitute/entitycore.git"
+    ENTITYCORE_BRANCH_OR_TAG = {env:ENTITYCORE_BRANCH_OR_TAG:main}
+    ENTITYCORE_CHECKOUT_DIR = {env:ENTITYCORE_CHECKOUT_DIR:tmp/entitycore}
+    EXTRACTED_TRACES=extracted
+    ENTITYSDK_TRACES_DIR=tests/unit/models/data/extracted
+allowlist_externals =
+    echo
+    git
+    rm
+    mv
+    make
+commands =
+    echo "Removing directory: {env:ENTITYCORE_CHECKOUT_DIR}"
+    rm -Rf "{env:ENTITYCORE_CHECKOUT_DIR}"
+    git clone --branch "{env:ENTITYCORE_BRANCH_OR_TAG}" --single-branch --depth 1 \
+        "{env:ENTITYCORE_REPO_URL}" \
+        "{env:ENTITYCORE_CHECKOUT_DIR}"
+    make -C "{env:ENTITYCORE_CHECKOUT_DIR}" extract-traces VIRTUAL_ENV=
+    rm -Rf "{env:ENTITYSDK_TRACES_DIR}"
+    mv -vi "{env:ENTITYCORE_CHECKOUT_DIR}/{env:EXTRACTED_TRACES}" "{env:ENTITYSDK_TRACES_DIR}"
