Update server schema

--- a/tox.ini
+++ b/tox.ini
@@ -80,7 +80,7 @@ commands =
 skip_install = true
 allowlist_externals = perl
 deps =
-    datamodel-code-generator[http, debug]
+    datamodel-code-generator[http, debug]==0.40.0
     ruff
 setenv =
     DB_API_URL = {env:DB_API_URL:https://staging.openbraininstitute.org/api/entitycore/openapi.json}
