--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "pydantic-settings",
     "typing_extensions; python_version < '3.12'",
     "backports.strenum; python_version < '3.11'",
+    "bluepyemodel>=1.0.38",
+    "bluepyopt",
 ]
 authors = [
     {name = "Open Brain Institute", email = "info@openbraininstitute.org"}
