Update server schemas to entitycore 2026.1.1

--- a/tox.ini
+++ b/tox.ini
@@ -78,9 +78,8 @@ commands =
 
 [testenv:generate-server-schemas]
 skip_install = true
-allowlist_externals = perl
 deps =
-    datamodel-code-generator[http, debug]
+    datamodel-code-generator[http, debug]>=0.52.1
     ruff
 setenv =
     DB_API_URL = {env:DB_API_URL:https://staging.openbraininstitute.org/api/entitycore/openapi.json}
@@ -100,7 +99,6 @@ commands =
         --use-annotated \
         --output-datetime-class AwareDatetime \
         --custom-file-header-path templates/header.jinja2
-    perl -i -pe 'BEGIN{$s="from __future__ import annotations"} if($.==1){print "$s\n"} $_ = "" if $_ eq "$s\n"' {toxinidir}/src/entitysdk/_server_schemas.py
 
 [testenv:update-traces]
 skip_install = true
