include `asset.storage_type` when testing for for local_store

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ minversion = 3.18
 deps =
     {[base]testdeps}
 commands =
-    python -m pytest --cov={[base]name} tests/unit {posargs}
+    python -m pytest --cov={[base]name} {posargs:tests/unit}
     python -m coverage xml
     python -m coverage html
 
